<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:orientation="vertical"
    tools:context=".ui.view.AccuracyActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_accuracy"
        android:textSize="@dimen/_16sdp"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/_30sdp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_accuaracy"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:padding="@dimen/_15sdp"
        android:textColor="@color/white"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp">
        <EditText
            android:id="@+id/edtVerificationCodes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_accuaracy"
            android:gravity="center"
            android:maxLength="6"
            android:inputType="number"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14sdp"
            android:background="@drawable/custom_rect_white_rad_20" />
        <ImageButton
            android:id="@+id/btnClearText"
            android:visibility="gone"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="@dimen/_10sdp"
            android:background="@drawable/ic_clear_text"/>
    </FrameLayout>
    <TextView
        android:id="@+id/txtToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/yellow"
        android:text="@string/not_enter_phone"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_5sdp"/>
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_continue"
        android:padding="@dimen/_10sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/selector_btn_pink_rad_20"
        android:textColor="@color/white"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txtOTP"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#E6D5DB"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:text="GỬI LẠI OTP"/>
        <TextView
            android:id="@+id/txtConfirmTime"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:padding="@dimen/_5sdp"
            android:textSize="@dimen/_12sdp"
            android:text="(00:57)"/>
    </LinearLayout>
</LinearLayout>